--- a/css/styles.css
+++ b/css/styles.css
@@ -1216,7 +1216,7 @@ background-image: linear-gradient(
           rgba(46, 47, 66, 0.7), 
           rgba(46, 47, 66, 0.7)
           ), 
-          url(../images/people-office.jpg);
+          url(../images/icons-mob/haroun.icon/5393284725755476500.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
